{
    "name": "PlayerInputAction",
    "maps": [
        {
            "name": "PlayerInput",
            "id": "bc5d3c9b-9bd0-4e72-8c7e-c88d5a5ea777",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "7c06ee74-7111-4875-9f7c-d47338a8226e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PointerPosition",
                    "type": "Value",
                    "id": "e3a264ed-a5a8-4359-85fb-f30fc4fc87bd",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "09564136-90f3-47a7-a37a-1fb4e7b3d751",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ItemPickUp",
                    "type": "Button",
                    "id": "6316899a-3b80-455e-8df3-fd332da0d56b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8be1b882-642a-4aea-bca2-76d1f72f1359",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "99ba20db-1bbc-4a01-91f9-6e442b38acdd",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "09420fbb-6e71-469f-8e12-5f584b0e192e",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "f6f76b99-870a-47a4-a96d-70556e62b313",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "103f4acc-040d-4dce-a835-0fa234d55a9b",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "2a221895-8e04-4147-b3a6-23a9c7388119",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "430caf33-2c77-44d2-abeb-dd0eb625e3d5",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "4477ccfc-11e8-4cde-91cf-c283dc59a53c",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ItemPickUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerUI",
            "id": "108a1936-f601-42c4-ba65-432e1438e509",
            "actions": [
                {
                    "name": "Drop",
                    "type": "Button",
                    "id": "70816ad6-6244-44c8-8eba-b941137a5c08",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "InventoryOnOff",
                    "type": "Button",
                    "id": "c3b3e214-d8f1-4fcb-81a4-440300a545dd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Interaction",
                    "type": "Button",
                    "id": "bb682aa3-7e7d-4bea-b1a7-f4f5bf5d24cd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a844ec85-7873-4ffe-a9b7-81b285fb0454",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interaction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9c921bb8-7f08-4f6d-9292-b344728e1eae",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InventoryOnOff",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aed8a569-645c-4e8d-99dd-023bb4fbb2d8",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Drop",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Item",
            "id": "874ae9e9-5877-4bad-87e8-48615068a7c1",
            "actions": [
                {
                    "name": "Create",
                    "type": "Button",
                    "id": "fcbf48f4-5179-4a76-98a9-82d1a866e075",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Destroy",
                    "type": "Button",
                    "id": "a34717da-d2d3-4fa0-8a8a-dade70bc3f43",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Use",
                    "type": "Button",
                    "id": "6ab37234-dd17-4a38-9a3d-f8b331de0eff",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f3127e31-3de8-448f-bf99-68317f88756e",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Create",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7f347d94-b1df-4e60-a127-4a7d4476f440",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Destroy",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4ddc4709-4b93-4929-baca-f6447a8d318f",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Use",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}